cmake_minimum_required(VERSION 3.5.1)

project(sample_2)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

find_package(Boost)
	
if(NOT boost_FOUND)
	
	set(Boost_INCLUDE_DIR "G:/boost_1_73_0")
	set(Boost_LIBRARY_DIRS "G:/boost_1_73_0/stage/lib")
	set(Boost_LIBRARIES "")

endif()

include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIRS})

add_executable(sample_2 main.cpp)
target_link_libraries(sample_2 ${Boost_LIBRARIES})

# Utilities

set(CMAKE_DIR "G:/CMake")
find_program(CMAKE_EXECUTABLE NAMES cmake HINTS ${CMAKE_DIR} ENV CMAKE_DIR PATH_SUFFIXES bin)

# Build

# Install

install(TARGETS sample_2 DESTINATION ${PROJECT_SOURCE_DIR}/bin)