cmake_minimum_required(VERSION 3.5.1)

project(sample_1)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set (BOOST_ROOT "G:/boost_1_73_0")

find_package(boost 1.73)

if(NOT boost_FOUND)
	
	set(Boost_INCLUDE_DIR "G:/boost_1_73_0")
	set(Boost_LIBRARY_DIRS "G:/boost_1_73_0/stage/lib")
	set(Boost_LIBRARIES "")

endif()

include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIRS})

add_executable(sample_1 main.cpp)
target_link_libraries(sample_1 ${Boost_LIBRARIES})

# Utilities

set(CMAKE_DIR "C:/Program Files/CMake")
find_program(CMAKE_EXECUTABLE NAMES cmake HINTS ${CMAKE_DIR} ENV CMAKE_DIR PATH_SUFFIXES bin)

# Build

set_property(TARGET sample_1 PROPERTY CXX_STANDARD 17)

# Install

install(TARGETS sample_1 DESTINATION ${PROJECT_SOURCE_DIR}/bin)